# pe-teacher-app

./: .firebaserc  .gitignore  CLAUDE.md  CONVERSATION_SUMMARY.md  MODULE_SYSTEM_SPEC.md  PEhub  PEhub 2  PRD.md  firebase.json  firestore.indexes.json  firestore.rules  grade-first-workflow-preview.html  index.html  lesson-sketch-only-preview.html  package.json  pe-teacher-app_대화와요약.md  pnpm-lock.yaml  tailwind.config.js  vite.config.js  오늘 체육 뭐하지? PRD.md
.github/workflows/: deploy.yml
docs/: .bkit-memory.json  .pdca-status.json  MODULE_SYSTEM_ROADMAP.md  firebase-design.md  gemini-ai-integration-plan.md  llm-recommend-design.md
docs/.pdca-snapshots/: snapshot-1771287240669.json  snapshot-1771289128665.json  snapshot-1771289496993.json  snapshot-1771289505856.json  snapshot-1771289513843.json  snapshot-1771289669711.json  snapshot-1771301321030.json  snapshot-1771328310114.json  (+9 more)
public/: manifest.json
scripts/: convertFmsTsv.mjs  csv2json.mjs
scripts/youtube-crawler/: PLAN.md  config.py  crawl.py  ingest.py  model_compare.html  model_compare.py  pyproject.toml  qa.py  qa_fix.py  reorganize.py  restart_ollama_after.sh  structure.py  to_csv.py  viewer.html  whisper_pipeline.py  whisper_test.py
scripts/youtube-crawler/data/: index.json  stats.json
scripts/youtube-crawler/data/raw/: progress.json
scripts/youtube-crawler/data/structured/: qa_manual_review.md  structure_status.json  transcripts.json
server/: .gitignore  __db_pe_activities.json  __db_pe_knowledge.json  __db_pe_records.json  package-lock.json  package.json  pnpm-lock.yaml
src/: App.jsx  main.jsx
(+220 files in other folders)
